tests/dataset/tpc-h/compiler/kt/q20.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q20.kt:99:25: error: operator '==' cannot be applied to 'Int' and 'Double'
                    if (ps.ps_partkey == toDouble((s as MutableMap<String, Any?>)["partkey"]) && ps.ps_suppkey == toDouble((s as MutableMap<String, Any?>)["suppkey"])) {
                        ^
/tmp/q20.kt:99:98: error: operator '==' cannot be applied to 'Int' and 'Double'
                    if (ps.ps_partkey == toDouble((s as MutableMap<String, Any?>)["partkey"]) && ps.ps_suppkey == toDouble((s as MutableMap<String, Any?>)["suppkey"])) {
                                                                                                 ^
